# guess_explainr

./: .gitignore  README.md  justfile  prek.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  pull_sources.yml
.woodpecker/: pull_sources.yml
frontend/: index.html  package-lock.json  package.json  prek.toml  vite.config.ts
frontend/src/: App.svelte
frontend/src/components/: Step1Config.svelte  Step2Url.svelte  Step3Countries.svelte  Step4Analysis.svelte  StepIndicator.svelte
plonkit/: LICENSE  fetch_plonkit.py  image_compress.py  metadata.json  plonkit_pdf.py
src/geolearnr/: app.py
src/geolearnr/routes/: index.py
src/geolearnr/templates/: base.html  index.html
src/geolearnr/templates/partials/: step3_content.html  step4_content.html
src/guess_explainr/: __main__.py  ai.py  app.py  auth_geoguessr.py  models.py  plonkit_cache.py  state.py
src/guess_explainr/routes/: index.py  panorama.py  plonkit.py  step1.py  step2.py  step3.py  step4.py
src/guess_explainr/static/: plonkit_countries.py  prose.css
src/guess_explainr/templates/: base.html  wizard.html
src/guess_explainr/templates/partials/: step2_content.html  step3_content.html  step4_content.html
tests/: conftest.py  test_routes.py  test_url_parsing.py
