[project]
name = "geolearnr"
version = "0.1.0"
description = "Geography learning app"
requires-python = ">=3.12"
dependencies = [
    "litestar[jinja]>=2.14",
    "pydantic-ai>=0.0.14",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pyrefly>=0.16",
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geolearnr"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project_includes = ["src"]
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]